Nghiệp vụ và Upload JQuery

--- a/language/en-GB/joomla.ini
+++ b/language/en-GB/joomla.ini
@@ -11,7 +11,8 @@ JERROR_PARSING_LANGUAGE_FILE="&#160;: error(s) in line(s) %s"
 
 ERROR="Error"
 INFO="Info"
-MESSAGE="Message"
+; MESSAGE="Message"
+MESSAGE="Thông báo"
 NOTICE="Notice"
 WARNING="Warning"
 
